# c-lexer

./: CMakeLists.txt  LICENSE  README.md
lib/jsonwriter/include/: json_writer.h
src/: lexer.c
src/tokenizer/: tokenizer.c  tokenizer.h
